unpackaged/main/default/objects/Bank_Statements_Processing__c/Bank_Statements_Processing__c.object-meta.xml
<CustomObject>
    <label>Bank Statements Processing</label>
    <nameField>
        <displayFormat>BankProcessing-{00000}</displayFormat>
        <label>Bank Statement Processing Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bank Statements Processing</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>