unpackaged/main/default/objects/Bank_Statements_Processing__c/fields/BookId__c.field-meta.xml
<CustomField>
    <fullName>BookId__c</fullName>
    <description>Contains the Ocrolus Book Id for the set of Bank Statements</description>
    <externalId>true</externalId>
    <label>BookId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>