unpackaged/main/default/objects/Bank_Statements_Processing__c/fields/Credit_Review_Controller__c.field-meta.xml
<CustomField>
    <fullName>Credit_Review_Controller__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Credit Review Controller</label>
    <referenceTo>Credit_Review_Controller__c</referenceTo>
    <relationshipLabel>Bank Statements Processing</relationshipLabel>
    <relationshipName>Bank_Statements_Processing</relationshipName>
    <type>Lookup</type>
</CustomField>