unpackaged/main/default/objects/Bank_Statements_Processing__c/fields/Ocrolus_Analysis_Retrieved__c.field-meta.xml
<CustomField>
    <fullName>Ocrolus_Analysis_Retrieved__c</fullName>
    <label>Ocrolus Analysis Retrieved</label>
    <type>DateTime</type>
</CustomField>