unpackaged/main/default/objects/Bank_Statements_Processing__c/fields/Transaction_Id__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Id__c</fullName>
    <description>in support of Ocrolus Connector (PD-2374)</description>
    <inlineHelpText>in support of Ocrolus Connector</inlineHelpText>
    <label>Transaction Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>